[gd_scene load_steps=2 format=2]

[ext_resource path="res://FruitSpawning.gd" type="Script" id=1]

[node name="FruitSpawning" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="ExtraTimeSpawner" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Items" type="Node2D" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ExtraTimeSpawner" to="." method="_on_ExtraTimeSpawner_timeout"]
